--- a/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
@@ -300,6 +300,10 @@
       <Link>Helpers\CollectionHelper.AsSequence.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Count.cs">
+      <Link>Helpers\CollectionHelper.Count.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\helpers\CollectionHelper.cs">
       <Link>Helpers\CollectionHelper.cs</Link>
     </Compile>
@@ -313,6 +317,14 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.ForAllAsync.Impl.cs">
       <Link>Helpers\CollectionHelper.ForAllAsync.Impl.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.IsEmpty.cs">
+      <Link>Helpers\CollectionHelper.IsEmpty.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.IsNotEmpty.cs">
+      <Link>Helpers\CollectionHelper.IsNotEmpty.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Randomize.cs">
@@ -482,6 +494,17 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.UppercaseWords.cs">
       <Link>Helpers\StringHelper.UppercaseWords.cs</Link>
       <DependentUpon>StringHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ValueHelper.cs">
+      <Link>Helpers\ValueHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ValueHelper.IsNotNull.cs">
+      <Link>Helpers\ValueHelper.IsNotNull.cs</Link>
+      <DependentUpon>ValueHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ValueHelper.IsNull.cs">
+      <Link>Helpers\ValueHelper.IsNull.cs</Link>
+      <DependentUpon>ValueHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IHasName.cs">
       <Link>IHasName.cs</Link>
@@ -849,6 +872,12 @@
     <Compile Include="Data\QueryableAdoDatabaseBase.cs" />
     <Compile Include="Data\QueryableDatabaseBase.cs" />
     <Compile Include="Extensions\ClrToolboxExtensionMethods.cs" />
+    <Compile Include="Extensions\Collections.IsEmpty.cs">
+      <DependentUpon>Collections.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Collections.IsNotEmpty.cs">
+      <DependentUpon>Collections.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\Collections.ToEnumerableSafe.cs">
       <DependentUpon>Collections.cs</DependentUpon>
     </Compile>
@@ -913,6 +942,9 @@
     <Compile Include="Extensions\Compression.GUnzip.cs">
       <DependentUpon>Compression.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\ValuesAndObjects.IsNotNull.cs">
+      <DependentUpon>ValuesAndObjects.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\Net.SetBasicAuth.SecureString.cs">
       <DependentUpon>Net.cs</DependentUpon>
     </Compile>
@@ -964,6 +996,10 @@
     </Compile>
     <Compile Include="Extensions\Strings.UppercaseWords.cs">
       <DependentUpon>Strings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\ValuesAndObjects.cs" />
+    <Compile Include="Extensions\ValuesAndObjects.IsNull.cs">
+      <DependentUpon>ValuesAndObjects.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\CollectionHelper.Cast.cs" />
     <Compile Include="Helpers\CollectionHelper.Empty.cs" />
