app server, cleanups and minor fixes
- UPD: data models of application server
- ADD: remote communicator app server module uses a whitelist of
functions that can be executed by a user now
- CHG: code cleanups

--- a/Projects/MarcelJoachimKloubert.ApplicationServer/Tools/AppServerProcessManager/AppServerProcessManager/AppServerProcessManager.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/Tools/AppServerProcessManager/AppServerProcessManager/AppServerProcessManager.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Data\BooleanToVisibilityConverter.cs" />
     <Compile Include="Data\RemoteProcessValueConverter.cs" />
+    <Compile Include="Helpers\JsonHelper.cs" />
     <Compile Include="JSON\ListProcesses\ListProcessesFuncResult.cs" />
     <Compile Include="JSON\ListProcesses\RemoteProcess.cs" />
     <Compile Include="JSON\ListProcesses\RemoteProcessIcon.cs" />
