--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.DocDB/MarcelJoachimKloubert.AppServer.Modules.DocDB.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.DocDB/MarcelJoachimKloubert.AppServer.Modules.DocDB.csproj
@@ -60,7 +60,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="DocDBModule.cs" />
-    <Compile Include="Principal\Security\DocDBUserPrincipal.cs" />
+    <Compile Include="Security\Principal\DocDBUserPrincipal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestHandler.cs" />
   </ItemGroup>
