extension methods and cleanups
- ADD: ThrowIfNull extension method
- CVG: code cleanups

--- a/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
@@ -942,6 +942,9 @@
     <Compile Include="Extensions\Compression.GUnzip.cs">
       <DependentUpon>Compression.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\LinqExpressions.ThrowIfNull.cs">
+      <DependentUpon>LinqExpressions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ValuesAndObjects.IsNotNull.cs">
       <DependentUpon>ValuesAndObjects.cs</DependentUpon>
     </Compile>
