--- a/MarcelJoachimKloubert.CLRToolbox.30/MarcelJoachimKloubert.CLRToolbox.30.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.30/MarcelJoachimKloubert.CLRToolbox.30.csproj
@@ -400,11 +400,23 @@
       <Link>Helpers\CompressionHelper.GZip.cs</Link>
       <DependentUpon>CompressionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.Build.cs">
+      <Link>Helpers\DataHelper.Build.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.BuildAll.cs">
+      <Link>Helpers\DataHelper.BuildAll.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.cs">
       <Link>Helpers\DataHelper.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.FromDbValue.cs">
       <Link>Helpers\DataHelper.FromDbValue.cs</Link>
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.GetBytes.cs">
+      <Link>Helpers\DataHelper.GetBytes.cs</Link>
       <DependentUpon>DataHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\DataHelper.ToDbValue.cs">
